[package]
name = "balance"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
chrono = { version ="0.4.23", features = ["serde"] }
rust_decimal = { version = "1.29.1", features = ["serde"] }
anyhow = "1.0.69"
clap = { version = "4.2.1", features = ["derive"] }
confy = { version = "0.6.0", default-features = false, features = ["yaml_conf"] }
